<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/splashBg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitStart"
            android:src="@drawable/splash_bg"/>

        <RelativeLayout
            android:id="@+id/containerLayout"
            android:layout_margin="36dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:textColor="@color/black_color"
                android:textSize="28sp"
                android:fontFamily="monospace"
                android:text="@string/splash_welcome_txt"
                android:layout_width="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="150dp"
                android:layout_height="wrap_content" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/signin_btn"
                    style="@style/StrokeButtonStyle"
                    android:onClick="signin"
                    android:minWidth="140dp"
                    android:text="@string/signin_btn_label"/>
                <Button
                    android:onClick="getStarted"
                    android:id="@+id/get_started_btn"
                    android:minWidth="140dp"
                    android:text="@string/get_started_btn_label"
                    android:layout_alignParentEnd="true"
                    style="@style/SolidButtonStyle"/>
                
            </RelativeLayout>

        </RelativeLayout>

    </RelativeLayout>
</layout>